--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 *.iml
 .idea
+*.html
+*.class
+*.xml
+*.jar
+*.txt
+*.jpg
+*.jsp
+*.js
+*.css
+samples/oauth2/sparklr/target/javadoc-bundle-options/package-list
+samples/oauth2/sparklr/target/maven-archiver/pom.properties
+samples/oauth2/sparklr/target/sparklr2-2.3.1.BUILD-SNAPSHOT.war
+*.properties
+samples/oauth2/sparklr/target/apidocs/package-list
+samples/oauth2/sparklr/pom.xml
